force-app/main/default/objects/Contact/fields/Basic_Education_in_Pharmacy_Graduation__c.field-meta.xml
<CustomField>
    <fullName>Basic_Education_in_Pharmacy_Graduation__c</fullName>
    <label>Basic Education in Pharmacy Graduation</label>
    <type>Date</type>
</CustomField>