force-app/main/default/objects/Contact/fields/Conditions_on_Licence__c.field-meta.xml
<CustomField>
    <fullName>Conditions_on_Licence__c</fullName>
    <label>Conditions on Licence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>