force-app/main/default/objects/Contact/fields/Demographic_Info_Use_Consent_For_NSCP__c.field-meta.xml
<CustomField>
    <fullName>Demographic_Info_Use_Consent_For_NSCP__c</fullName>
    <description>consent for NSCP to USE the demographic information collected</description>
    <label>Demographic Info Use Consent For NSCP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>