force-app/main/default/objects/Contact/fields/Demographic_Information_Consent_For_NSCP__c.field-meta.xml
<CustomField>
    <fullName>Demographic_Information_Consent_For_NSCP__c</fullName>
    <inlineHelpText>NSCP may COLLECT my demographic information</inlineHelpText>
    <label>Demographic Information Consent For NSCP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>