force-app/main/default/objects/Contact/fields/Indigenous_Identity__c.field-meta.xml
<CustomField>
    <fullName>Indigenous_Identity__c</fullName>
    <label>Indigenous Identity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Indigenous_Identity</valueSetName>
    </valueSet>
</CustomField>