force-app/main/default/objects/Contact/fields/Insurer__c.field-meta.xml
<CustomField>
    <fullName>Insurer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Registrants</relationshipLabel>
    <relationshipName>Insurer_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>