force-app/main/default/objects/Contact/fields/Jurisprudence_Exam_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Jurisprudence_Exam_Completion_Date__c</fullName>
    <label>Jurisprudence Exam Completion Date</label>
    <type>Date</type>
</CustomField>