force-app/main/default/objects/Contact/fields/MailingAddress__c.field-meta.xml
<CustomField>
    <fullName>MailingAddress__c</fullName>
    <formula>MailingStreet &amp; &quot;, &quot; &amp; MailingCity &amp; &quot;, &quot; &amp; MailingState &amp; &quot;, &quot; &amp; MailingPostalCode &amp; &quot;, &quot; &amp; MailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MailingAddress</label>
    <type>Text</type>
</CustomField>