force-app/main/default/objects/Contact/fields/MC_Expected_Year_of_Graduation__c.field-meta.xml
<CustomField>
    <fullName>MC_Expected_Year_of_Graduation__c</fullName>
    <label>MC Expected Year of Graduation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>