force-app/main/default/objects/Contact/fields/MC_Field_Of_Practice__c.field-meta.xml
<CustomField>
    <fullName>MC_Field_Of_Practice__c</fullName>
    <label>MC Field Of Practice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>