force-app/main/default/objects/Contact/fields/MC_Membership_Class__c.field-meta.xml
<CustomField>
    <fullName>MC_Membership_Class__c</fullName>
    <description>MC sync field</description>
    <label>MC Membership Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>