force-app/main/default/objects/Contact/fields/MC_Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>MC_Membership_Type__c</fullName>
    <description>Mailchimp sync field</description>
    <label>MC Membership Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>