force-app/main/default/objects/Contact/fields/MC_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>MC_Registration_Number__c</fullName>
    <description>Mailchimp sync field</description>
    <label>MC Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>