force-app/main/default/objects/Contact/fields/NSCP_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>NSCP_Contact_Id__c</fullName>
    <externalId>true</externalId>
    <label>NSCP Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>