force-app/main/default/objects/Contact/fields/PA_Flag__c.field-meta.xml
<CustomField>
    <fullName>PA_Flag__c</fullName>
    <label>PA Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>