force-app/main/default/objects/Contact/fields/Primary_Employer_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Primary_Employer_Address_Line_1__c</fullName>
    <label>Primary Employer: Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>