force-app/main/default/objects/Contact/fields/Primary_Employer_Country__c.field-meta.xml
<CustomField>
    <fullName>Primary_Employer_Country__c</fullName>
    <label>Primary Employer: Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>