force-app/main/default/objects/Contact/fields/Primary_Employer_Pharmacy_Fax__c.field-meta.xml
<CustomField>
    <fullName>Primary_Employer_Pharmacy_Fax__c</fullName>
    <label>Primary Employer: Pharmacy Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>