force-app/main/default/objects/Contact/fields/Primary_Employer_Postal_Zip__c.field-meta.xml
<CustomField>
    <fullName>Primary_Employer_Postal_Zip__c</fullName>
    <label>Primary Employer: Postal/Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>