force-app/main/default/objects/Contact/fields/Primary_Employer_Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Employer_Primary_Phone__c</fullName>
    <label>Primary Employer: Primary Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>