force-app/main/default/objects/Contact/fields/Primary_Employer_Province_State__c.field-meta.xml
<CustomField>
    <fullName>Primary_Employer_Province_State__c</fullName>
    <label>Primary Employer: Province/State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>