force-app/main/default/objects/Contact/fields/Registrations_Number__c.field-meta.xml
<CustomField>
    <fullName>Registrations_Number__c</fullName>
    <description>auto generated id number</description>
    <label>Registrations Number</label>
    <type>AutoNumber</type>
</CustomField>