force-app/main/default/objects/Contact/fields/Second_Name__c.field-meta.xml
<CustomField>
    <fullName>Second_Name__c</fullName>
    <label>Second Name</label>
    <length>22</length>
    <type>Text</type>
</CustomField>