force-app/main/default/objects/Contact/fields/Sex_At_Birth__c.field-meta.xml
<CustomField>
    <fullName>Sex_At_Birth__c</fullName>
    <label>Sex At Birth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sex_At_Birth</valueSetName>
    </valueSet>
</CustomField>