force-app/main/default/objects/Contact/fields/Work_Fax__c.field-meta.xml
<CustomField>
    <fullName>Work_Fax__c</fullName>
    <label>Work Fax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>