force-app/main/default/objects/Contact/recordTypes/Insurance_Provider.recordType-meta.xml
<RecordType>
    <fullName>Insurance_Provider</fullName>
    <active>true</active>
    <label>Insurance Provider</label>
</RecordType>